# Dynago

./: .gitignore  Experiment Analysis.md  Experiment_Analysis.md  README.md  main.py  pyproject.toml  requirements.txt
dynago/: config.py  main.py
dynago/data/: gesture_map.json  normalized.csv  raw.csv  swipe.csv  test.csv  test_norm.csv
dynago/models/: gesture_svm.pkl  swipe_svm.pkl
dynago/performance/: performance_metrics.json
dynago/src/: capture.py  command.py  gaze.py  main.py  mouse.py  swipe.py  test.py  train.py  train_static.py  train_swipe.py  voice_control.py
dynago/src/dyno/: trigger.py  voice_assistant.py
dynago/utils/: analyze_performance.py  capture_data.py  confusion_matrix.py  normalize_data.py  visualize_data.py
src/dynago/: __main__.py
