[project]
name = "dynago"
version = "0.1.0"
description = ""
authors = [
    {name = "KreativeThinker",email = "sagely2005eagle@gmail.com"}
]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.12"
packages = [{include = "dynago"}]
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyautogui (>=0.9.54,<0.10.0)",
    "pynput (>=1.8.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
capture = "dynago.utils.capture_data:capture"
normalize = "dynago.utils.normalize_data:normalize"
train = "dynago.src.train:train"
dev = "dynago.src.main:main"
test = "dynago.src.test:test"
